fixed dark mode colors for illustrations

--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -77,14 +77,14 @@
 }
 
 #mldssvg_dark_projects {
-    background-image: url('../assets/undraw_charts_re_5qe9.svg');
+    background-image: url('../assets/undraw_charts_re_5qe9_dark.svg');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
 }
 
 #devsvg_dark_projects {
-    background-image: url('../assets/undraw_building_websites_i78t.svg');
+    background-image: url('../assets/undraw_building_websites_i78t_dark.svg');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
@@ -98,7 +98,7 @@
 }
 
 #majorssvg_dark_projects {
-    background-image: url('../assets/undraw_organizing_projects_re_9p1k.svg');
+    background-image: url('../assets/undraw_organizing_projects_re_9p1k_dark.svg');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
